# shrec

./: .env  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  demos.ipynb  dist_visualizations.ipynb  dynamical_systems_profile.py  environment.yml  profile.prof  pyproject.toml  scratch.ipynb  set-git-global.sh
benchmarks/: baseline_models.py  benchmark_utils.py  dynamical_systems.py  timing_experiments.py
docs/: ASSESSMENT.md  architecture.md  math-learning-notes.md  pre-release-notes.md  tests-math.md
docs/history/: 2026-05-refactor-assessment.md
quarto-spike/: _quarto.yml  algorithm.qmd  index.qmd  modules.qmd  quickstart.qmd  stage-consensus.qmd  stage-embedding.qmd  stage-reconstruction.qmd  stage-simplicial.qmd
shrec/: models.py
src/shrec/: __init__.py  embeddings.py
src/shrec/graph/: __init__.py  communities.py  unionfind.py
src/shrec/models/: __init__.py  base.py  classical.py  hirata_nomura.py  models.py  recurrence_clustering.py  recurrence_manifold.py
src/shrec/recurrence/: __init__.py  consensus.py  kernel.py  simplicial.py
src/shrec/utils/: __init__.py  graph_tools.py  io.py  metrics.py  preprocessing.py  signal.py  surrogates.py  transforms.py
tests/: conftest.py  test_benchmarks_dynamical_systems.py  test_graph_adjacency.py  test_graph_communities.py  test_models_base.py  test_models_classical.py  test_models_invariances.py  test_models_recurrence_clustering.py  test_models_recurrence_manifold.py  test_preprocessing.py  test_recurrence_kernel.py  test_recurrence_simplicial.py  test_scaling_laws.py
