[project]
name = "shrec"
version = "0.1.1+correlated-hamster"
description = "Recurrence-based causal driver discovery in time series"
authors = [{ name = "William Gilpin" }, { name = "Neil Anthony" }]
requires-python = ">=3.8,<3.12"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.12.0",
    "graspologic==3.4.1",
    # "graspologic",
    "cdlib",
    "h5py",
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
    "leidenalg",
    "matplotlib",
    "networkx",
    "numba",
    # "numpy",
    "pandas",
    "python-igraph",
    "scanpy",
    "scikit-learn",
    # "scipy",
    "seaborn",
    "statsmodels",
    "umap-learn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" } # tells setuptools your packages are inside src/

[tool.setuptools.packages.find]
where = ["src"] # search for packages only in src/
