[project]
name = "shrec"
version = "0.2.0.dev0"
description = "Recurrence-based causal driver discovery in time series (Gilpin, PRX 2025)"
readme = "README.md"
authors = [{ name = "William Gilpin" }, { name = "Neil Anthony" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["time-series", "recurrence", "causality", "dynamical-systems"]

# Core runtime deps — kept narrow so downstream apps can install shrec
# without pulling notebook / plotting / bio extras.
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.12,<2",
    "scikit-learn>=1.3,<2",
    "networkx>=3.0,<4",
    "pandas>=2.0,<3",
    "graspologic>=3.4,<4",
    # `future` provides the `past` shim used by graspologic → hyppo on
    # Python 3.10+ where it isn't a transitive guarantee from upstream.
    "future>=1.0",
    "numba>=0.59",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
# Heavy / domain-specific deps; opt-in via `pip install shrec[<extra>]`.
viz = ["matplotlib", "seaborn"]
notebook = ["jupyterlab", "ipykernel", "ipywidgets"]
graph-extras = ["leidenalg", "python-igraph", "cdlib"]
bio = ["scanpy"]
sim = ["umap-learn"]  # legacy fuzzy-simplicial impl in shrec.recurrence
all = [
    "matplotlib",
    "seaborn",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "leidenalg",
    "python-igraph",
    "cdlib",
    "scanpy",
    "umap-learn",
    "h5py",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pypdf",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
